--- a/Calculator.html
+++ b/Calculator.html
@@ -24,7 +24,7 @@
         <input type="button" onclick="Add('/')" value="/">
         <input type="button" onclick="Clear()" value="C" />
         <input type="button" onclick="Add(0)" value="0" />
-        <input type="submit" value="E" onclick="Calculator()"/>
+        <input type="button" value="E" onclick="Calculator()"/>
 
     </form>
     <script src="myFunction.js"></script>
